--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Bùi Hồng Phúc (Design front end)</h1>
+    <hr>
+    <img src="https://vietnamitx.com/attachments/top-hinh-nen-dong-wallpaper-engine-desktop-tuyet-dep-download-chon-loc-2021-jpg.2215/" alt="">
+    <hr>
     <div class="thongtin">
         <b>tên: </b> <i> Bùi Hồng phúc</i>
     </div>
